Upgrade Gradle Wrapper

--- a/transpile/templates/java/build.gradle
+++ b/transpile/templates/java/build.gradle
@@ -28,6 +28,7 @@ task uberjar(type: Jar) {
         attributes 'Main-Class': 'trld.jsonld.Cmd'
     }
     archiveBaseName = 'trld-with-deps'
+    duplicatesStrategy 'exclude'
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
