Add Python package files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-build
-cache
-dist
-.mypy_cache
+/build
+/cache
+/dist
+/.mypy_cache
+/*.egg-info
 __pycache__
+
 *.sw[f-p]
 .gradle
-_bak
-Session.vim
+
+/_bak
+/Session.vim
