Add CLI entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,7 @@ python_requires = >= 3.6
 
 [options.packages.find]
 include = trld*
+
+[options.entry_points]
+console_scripts =
+    trld = trld.cli:main
