--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: 0BSD
     Operating System :: OS Independent
+    Typing :: Typed
 
 [options]
 package_dir =
@@ -19,6 +20,9 @@ python_requires = >= 3.6
 
 [options.packages.find]
 include = trld*
+
+[options.package_data]
+trld = py.typed
 
 [options.entry_points]
 console_scripts =
