Update package name and description

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = TRLD
+name = trld
 version = 0.1.0
 author = Niklas Lindström
 author_email = lindstream@gmail.com
-description = Translating Linked Data
+description = A library of algorithms for working with JSON-LD and translating between various forms of RDF.
 long_description = file:README.md
 long_description_content_type = text/markdown
 url = https://github.com/niklasl/trld
