Fix trove classifier (0BSD is not yet recognized)

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/niklasl/trld
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: 0BSD
+    License :: OSI Approved
     Operating System :: OS Independent
     Typing :: Typed
 
