--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = trld
-version = 0.1.1
+version = 0.2.0-dev
 author = Niklas Lindström
 author_email = lindstream@gmail.com
 description = A library of algorithms for working with JSON-LD and translating between various forms of RDF.
